--- a/index.html
+++ b/index.html
@@ -210,11 +210,8 @@
 
   <script>
     // ─── CONFIG ─────────────────────────────────────────────────────────────
-    const WSS_URL = 
-      "wss://1xbet.lk/games-frame/sockets/crash?"
-      + "ref=1&gr=911&whence=55&fcountry=208"
-      + "&appGuid=games-web-app-default-web-v3"
-      + "&lng=en&v=1.5";
+    const WSS_URL = "wss://1xbet.lk/games-frame/sockets/crash?ref=1&gr=911&whence=55&fcountry=208&appGuid=games-web-app-default-web-v3&lng=en&v=1.5";
+      
 
     const WINDOW_SIZE = 10;      // how many last points to keep
     const JITTER      = 0.3;     // random jitter factor for prediction
