--- a/index.html
+++ b/index.html
@@ -3,249 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crash Game Odd Live Tracker</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #161616 0%, #272747 100%);
-            margin: 0;
-            padding: 30px 10px;
-            color: #fff;
-            min-height: 100vh;
-        }
-        .container {
-            max-width: 700px;
-            margin: 0 auto;
-            background: rgba(40,40,60,0.82);
-            border-radius: 15px;
-            padding: 25px 35px;
-            border: 1.5px solid #00ffc2;
-            box-shadow: 0 0 30px 0 rgba(0,255,194,0.09);
-        }
-        .header {
-            text-align: center;
-            margin-bottom: 28px;
-        }
-        .header h1 {
-            color: #00ffc2;
-            font-size: 2.2em;
-            margin-bottom: 10px;
-            letter-spacing: 1px;
-            text-shadow: 0 0 8px #00ffc2bb;
-        }
-        .live-odd {
-            font-size: 2.5em;
-            color: #ffe14a;
-            font-weight: bold;
-            text-shadow: 0 0 16px #ffe14a55;
-        }
-        .stat-box {
-            display: flex;
-            justify-content: space-between;
-            margin: 18px 0 0 0;
-            gap: 10px;
-        }
-        .stat {
-            background: rgba(0,0,0,0.18);
-            border-left: 5px solid #00ffc2;
-            border-radius: 8px;
-            padding: 13px 20px;
-            min-width: 140px;
-            text-align: center;
-        }
-        .stat .label {
-            color: #b4fff3;
-            font-size: 1.06em;
-        }
-        .stat .value {
-            display: block;
-            font-size: 1.7em;
-            margin: 6px 0 0 0;
-            color: #fff;
-            font-weight: bold;
-        }
-        .stat.high {
-            border-left: 5px solid #ff7b3b;
-            background: rgba(255,123,59,0.09);
-        }
-        .stat.percent {
-            border-left: 5px solid #ffe14a;
-            background: rgba(255,225,74,0.09);
-        }
-        .log-box {
-            background: rgba(0,0,0,0.18);
-            border-radius: 8px;
-            padding: 12px 16px;
-            margin: 20px 0 0 0;
-            font-family: 'Courier New', monospace;
-            font-size: 0.98em;
-            height: 110px;
-            overflow-y: auto;
-            color: #c8fff9;
-        }
-        .notice {
-            margin: 25px 0 0 0;
-            background: rgba(255,193,7,0.13);
-            border: 1px solid #ffe14a;
-            border-radius: 8px;
-            color: #ffe14a;
-            padding: 11px 22px;
-            font-size: 1.01em;
-            position: relative;
-        }
-        .notice strong { color: #fff; }
-        .date-box {
-            background: rgba(0,0,0,0.18);
-            border-radius: 8px;
-            border-left: 4px solid #ffe14a;
-            color: #ffe14a;
-            font-family: 'Courier New', monospace;
-            font-size: 1.02em;
-            padding: 10px 15px;
-            margin: 0 0 14px 0;
-        }
-        .conn-status {
-            display: inline-block;
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            margin-right: 8px;
-            vertical-align: -1px;
-            background: #ccc;
-        }
-        .conn-status.ok { background: #00ffc2; box-shadow: 0 0 10px #00ffc2; }
-        .conn-status.bad { background: #ff4f4f; box-shadow: 0 0 10px #ff4f4f; }
-    </style>
+    <title>Ball Shuffle Game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Crash Odd Live Tracker</h1>
-            <div style="color:#b4fff3;font-size:1.06em;">Rasitha Lakshan All Right Reserved!</div>
-        </div>
-        <div class="date-box" id="dateBox">Loading time...</div>
-        <div style="margin-bottom:10px;">
-            <span class="conn-status" id="connStatus"></span>
-            <span id="connText">Connecting...</span>
-        </div>
-        <div style="text-align:center;margin:18px 0 7px 0;">
-            <span>Live Odd Value:</span>
-            <span class="live-odd" id="oddNow">--</span>
-        </div>
-        <div class="stat-box">
-            <div class="stat">
-                <span class="label">Games Observed</span>
-                <span class="value" id="totalGames">0</span>
-            </div>
-            <div class="stat high">
-                <span class="label">Odds &gt; 8</span>
-                <span class="value" id="highOdds">0</span>
-            </div>
-            <div class="stat percent">
-                <span class="label">% Odds &gt; 8</span>
-                <span class="value" id="highPercent">0</span>
-            </div>
-        </div>
-        <div class="log-box" id="logBox"></div>
-        <div class="notice">
-            <strong>⚠️ Note:</strong> Gambling can be addictive. Please play responsibly.
-        </div>
+    <!-- Ball Display -->
+    <div id="game">
+        <div class="ball" id="ball"></div>
     </div>
-<script>
-let ws = null;
-let reconnectMs = 5000;
-let totalGames = 0, highOdds = 0;
-let oddLast = null;
 
-function log(msg, clr="#b4fff3") {
-    let logBox = document.getElementById('logBox');
-    let el = document.createElement('div');
-    el.innerHTML = `[${(new Date()).toLocaleTimeString()}] <span style="color:${clr};">${msg}</span>`;
-    logBox.appendChild(el);
-    logBox.scrollTop = logBox.scrollHeight;
-}
+    <!-- Shuffle Button -->
+    <div class="shuffle-container">
+        <button id="shuffleButton">Shuffle</button>
+    </div>
 
-function setConn(ok) {
-    let cs = document.getElementById('connStatus');
-    let ct = document.getElementById('connText');
-    if(ok) {
-        cs.className = 'conn-status ok';
-        ct.innerText = 'Connected to WebSocket';
-    } else {
-        cs.className = 'conn-status bad';
-        ct.innerText = 'Disconnected - reconnecting...';
-    }
-}
-function updateUI(odd) {
-    document.getElementById('oddNow').textContent = (odd != null) ? odd.toFixed(2) : "--";
-    document.getElementById('totalGames').textContent = totalGames;
-    document.getElementById('highOdds').textContent = highOdds;
-    document.getElementById('highPercent').textContent = totalGames === 0 ? "0" : ((highOdds/totalGames)*100).toFixed(2);
-}
-function extractOdd(msg) {
-    // Try to extract odd from both common types
-    try {
-        let data = JSON.parse(msg);
-        if (data && data.t === "cr" && data.v && typeof data.v.o === "number") {
-            return data.v.o;
-        }
-    } catch(e){}
-    // Try SignalR format (if ever changed)
-    try {
-        let data = JSON.parse(msg.slice(0, -1));
-        if(data && data.target === 'OnCrash' && data.arguments && data.arguments.length > 0 && typeof data.arguments[0].f === 'number'){
-            return data.arguments[0].f;
-        }
-    } catch(e){}
-    return null;
-}
-function openWs() {
-    try {
-        ws = new WebSocket("wss://1xbet.lk/games-frame/sockets/crash?ref=1&gr=911&whence=55&fcountry=208&appGuid=games-web-app-default-web-v3&lng=en&v=1.5");
-        ws.onopen = function() {
-            setConn(true);
-            log("WebSocket connected", "#00ffc2");
-        };
-        ws.onclose = function() {
-            setConn(false);
-            log("WebSocket closed, trying reconnect...", "#ff4f4f");
-            setTimeout(openWs, reconnectMs);
-        };
-        ws.onerror = function() {
-            setConn(false);
-            log("WebSocket error", "#ff4f4f");
-        };
-        ws.onmessage = function(e) {
-            let odd = extractOdd(e.data);
-            if(odd !== null && odd !== oddLast) {
-                oddLast = odd;
-                totalGames++;
-                if(odd > 8) highOdds++;
-                updateUI(odd);
-                log("New odd: "+odd, odd>8 ? "#ffb74a" : "#b4fff3");
-            }
-        };
-    } catch(e) {
-        setConn(false);
-        log("WS connection error: "+e, "#ff4f4f");
-        setTimeout(openWs, reconnectMs);
-    }
-}
-function updateTime() {
-    let now = new Date();
-    let opts = {weekday:'long', year:'numeric', month:'long', day:'numeric', hour:'2-digit', minute:'2-digit', second:'2-digit'};
-    document.getElementById('dateBox').textContent = "📅 " + now.toLocaleDateString('en-US', opts);
-}
-document.addEventListener('DOMContentLoaded', function() {
-    log("Application started", "#00ffc2");
-    updateTime();
-    setInterval(updateTime, 1000);
-    updateUI(null);
-    openWs();
-});
-window.addEventListener('beforeunload', function() {
-    if(ws) ws.close();
-});
-</script>
+    <script src="script.js"></script>
 </body>
 </html>
